# tailarc-old

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  index.html
.cargo/: config.toml
crates/bevy-bracket-lib/: Cargo.toml
crates/bevy_bracket_lib/: Cargo.toml
crates/bevy_bracket_lib/src/: lib.rs
crates/tailarc/: Cargo.toml
crates/tailarc/src/: components.rs  deserialize.rs  gamelog.rs  gui.rs  main.rs  map.rs  map_indexing.rs  monster_ai.rs  render.rs  tile.rs  tilemap.rs  visibility.rs
crates/tailarc/src/map_builders/: area_starting_position.rs  bsp_dungeon.rs  cellular_automata.rs  common.rs  cull_unreachable.rs  drunkard.rs  mod.rs  room_based_spawner.rs  room_based_starting_position.rs  simple_map.rs  spawner.rs
crates/tailarc/src/raws/: item_structs.rs  manager.rs  mob_structs.rs  mod.rs
crates/tailarc/src/systems/: damage.rs  drop_item.rs  input.rs  inventory.rs  map_indexing.rs  melee_combat.rs  mod.rs  monster_ai.rs  particle.rs  save_game.rs  use_item.rs  visibility.rs
src/: main.rs  render.rs  tile.rs  visibility.rs
static/: spawns.json
static/levels/: finlai.txt
tailarc/: Cargo.toml
tailarc/src/: render.rs
