[package]
name = "tailarc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.5.0"
bevy_doryen = "0.2.0"
bevy_ecs = "0.5.0"
doryen-rs = "1.2.3"
rand = "0.8.4"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
