[package]
name = "tailarc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.5.0"
bevy_bracket_lib = { path = "../bevy_bracket_lib" }
bevy_core = "0.5.0"
bevy_ecs = "0.5.0"
bevy_reflect = "0.5.0"
bevy_scene = "0.5.0"
bevy_utils = "0.5.0"
bracket-lib = { version = "0.8.1", features = ["serde"] }
directories = "4.0.1"
include_dir = "0.6.2"
once_cell = "1.8.0"
parking_lot = "0.11.2"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.28"
tracing-subscriber = { version = "0.2.24", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"

[features]
default = []
trace = ["tracing-subscriber"]
